# corc

./: .coveragerc  .isort.cfg  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.rst  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.md
src/corc/: __init__.py
src/corc/core/: __init__.py  compute_corc.py  postprocess.py  preprocess.py  process.py  process_spline.py
src/corc/grading/: __init__.py  volume_grading.py
src/corc/landmarks/: __init__.py  landmarks.py  landmarks_3dfe.py  landmarks_3dfemvlm.py  landmarks_68.py  landmarks_bp4d.py
src/corc/utils/: __init__.py  curvature.py  load_landmarks.py  load_pointclouds.py  rotation.py
src/corc/vis/: __init__.py  difference.py  mesh.py  visuals.py
src/corc/volume/: __init__.py  volume_computation.py
tests/: conftest.py
